# Simple-Json-Library

./: CMakeLists.txt  README.md
include/: simplejson.h
src/: simplejson.c  sjtest.c
